httpbin.org/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: httpbin-frontend
  namespace: frontend
  labels:
    service.istio.io/canonical-name: httpbin.org
spec:
  hosts:
  - httpbin.org
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 443
  - name: https #tls
    number: 443
    protocol: HTTPS #TLS
  resolution: DNS
